table info is props

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -14,6 +14,13 @@
     padding: 20px;
     background-color:#38ed85;
 }
+.row {
+    margin-bottom: 10px;
+}
+.row label {
+    min-width: 170px;
+    display: inline-block;
+}
 h2 {
     margin:0 0 20px;
     color: #fff;
