--- a/public/css/default.css
+++ b/public/css/default.css
@@ -1,3 +1,10 @@
+body {
+    background-color:#91bf67;
+    background-image: linear-gradient(90deg, rgba(112, 166, 91,.5) 50%, transparent 50%),
+    linear-gradient(rgba(112, 166, 91,.5) 50%, transparent 50%);
+    background-size:150px 150px;
+}
+
 .root{
 	font-family: Open Sans, sans-serif;
 }
@@ -12,15 +19,93 @@
 .filter-wrap {
     margin-bottom: 20px;
     padding: 20px;
-    background-color:#38ed85;
+    /*background-color:#33613c;*/
+    background-color: rgba(15,57,37,0.6);
+    color: #fff;
 }
 .row {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 .row label {
-    min-width: 170px;
+    min-width: 250px;
     display: inline-block;
 }
+.row input[type="text"] {
+    min-width: 250px;
+    display: inline-block;
+    border: 1px solid #000;
+    padding: 4px;
+}
+.row select {
+    min-width: 250px;
+    display: inline-block;
+    border: 1px solid #000;
+    padding: 4px;
+}
+.btn-row {
+    padding-top: 20px;
+}
+.btn {
+    color: #fff;
+    border: 0px;
+    transition: background-color 0.4s;
+    position: relative;
+    padding: 10px 40px;
+    font-size: 20px;
+    text-decoration: none;
+    background-color: #82BF56;
+    outline: 0;
+    height: 50px;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #609e33;
+}
+
+.radio {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+    margin: 10px 0 0 7px;
+}
+.radio + label {
+    position: relative;
+    padding: 0 20px 0 30px;
+    cursor: pointer;
+}
+.radio + label:before {
+    content: '';
+    position: absolute;
+    top: -3px;
+    left: 0;
+    width: 17px;
+    height: 17px;
+    border: 1px solid #CDD1DA;
+    border-radius: 50%;
+    background: #FFF;
+}
+.radio + label:after {
+    content: '';
+    position: absolute;
+    top: 1px;
+    left: 4px;
+    width: 11px;
+    height: 11px;
+    border-radius: 50%;
+    background: #9FD468;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.5);
+    opacity: 0;
+    transition: .2s;
+}
+.radio:checked + label:after {
+    opacity: 1;
+}
+.radio:focus + label:before {
+    /*box-shadow: 0 0 0 3px rgba(255,255,0,.7);*/
+}
+
+
 h2 {
     margin:0 0 20px;
     color: #fff;
@@ -29,6 +114,7 @@ h2 {
 
 .table {
     border-collapse: collapse;
+    background-color: #fff;
 }
 .table th,
 .table td {
