added speed search

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -151,6 +151,35 @@ h2 {
     left: 18px;
 }
 
+/*-------------------------строка поиска-------------------*/
+.b-search ul {
+    list-style: none;
+    display: inline-block;
+    width: 420px;
+    text-align: left;
+}
+
+.b-search ul li {
+    display: block;
+    padding: 15px 20px;
+    background-color: #F8F8F8;
+    color: #7B8585;
+    margin-bottom: 3px;
+    position: relative;
+    transition: 0.3s;
+}
+
+.b-search ul li a {
+    position: absolute;
+    left: 160px;
+    font-size: 12px;
+    line-height: 16px;
+    color: #969d9d;
+}
+
+.b-search ul li:hover {
+    background-color:#d8f2f1;
+}
 
 
 
